Added "fat" to the heading

--- a/test.html
+++ b/test.html
@@ -4,8 +4,8 @@
 	<title>Test page</title>
 </head>
 <body>
-	<h1> Hey. I'm a big heading.</h1>
-	<p>Hey I'm a <b>paragraph</b> element. Cool huh? </p>
+	<h1> Hey. I'm a big FAT heading. Look at me.</h1>
+	<p>Hey. I'm a <b>paragraph</b> element. Cool huh? </p>
 	<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a>
 	<p>My name is:<br>
 	Kitty Cat</p>
