Wrote the CSS for Randy's website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="icon" href="img/cat-favicon.jpg">
 	<title>Randy Bobandy</title>
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Rubik+Beastly&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- Header Element -->
@@ -16,7 +18,7 @@
 		<h2>About Randy</h2>
 		<p>Randy is a absolute unit. A big fan of naps and food she doesn't let a meal time pass her by, just like her name-sake.</p>
 		<img src="img/randy-big.jpg">
-		<p>Randy and her vice</p>
+		<p class="caption">Reason behind her hunger</p>
 		
 		<!-- Characteristics -->
 		<h2>Randy's Characteristics</h2>
